Added stuff to update the categoryList when new data gets added, still implementation to do!

--- a/app/src/main/res/layout/list_item_category.xml
+++ b/app/src/main/res/layout/list_item_category.xml
@@ -14,7 +14,7 @@
     android:paddingBottom="10dp">
 
     <TextView
-        android:id="@+id/categoryTxt"
+        android:id="@+id/categoryTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18sp"
