--- a/app/src/main/res/layout/fragment_poems_per_category.xml
+++ b/app/src/main/res/layout/fragment_poems_per_category.xml
@@ -20,9 +20,11 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@id/ablPoemsPerCategory"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/rvPoemsPerCategory"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp"
+        android:padding="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ablPoemsPerCategory"
+        tools:listitem="@layout/list_item_poem_per_category" />
 </androidx.constraintlayout.widget.ConstraintLayout>
