--- a/app/src/main/res/layout/fragment_poems_per_category.xml
+++ b/app/src/main/res/layout/fragment_poems_per_category.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeActivity">
+    android:orientation="vertical"
+    android:background="@color/general_background"
+    tools:context=".ui.home.poemsPerCategoryList.PoemsPerCategoryListFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/ablPoemsPerCategory"
@@ -22,8 +24,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPoemsPerCategory"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingTop="6dp"
+        android:paddingBottom="96dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ablPoemsPerCategory"
         tools:listitem="@layout/list_item_poem_per_category" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
