--- a/app/src/main/res/layout/list_item_own_review.xml
+++ b/app/src/main/res/layout/list_item_own_review.xml
@@ -1,48 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="14dp"
     android:layout_marginTop="12dp"
     android:layout_marginEnd="14dp"
     android:layout_marginBottom="12dp"
-    tools:context=".ui.home.poem.PoemFragment">
+    android:background="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true"
+    android:orientation="vertical"
+    app:cardBackgroundColor="@color/colorWhite">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="12dp">
 
         <TextView
-            android:id="@+id/tvNoReviewTitle"
+            android:id="@+id/tvOwnReviewTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Rate this poem"
+            android:text="Your review"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tvNoReviewBody"
+        <com.shahar91.poems.ui.custom.ReviewHeader
+            android:id="@+id/rhUserHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tell others what you think"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
-            app:layout_constraintTop_toBottomOf="@id/tvNoReviewTitle" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/tvOwnReviewTitle" />
 
-        <me.zhanghai.android.materialratingbar.MaterialRatingBar
-            android:id="@+id/rbNoReview"
-            style="@style/Widget.MaterialRatingBar.RatingBar"
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="18dp"
-            android:numStars="5"
+            android:layout_marginTop="8dp"
+            android:text="No idea. Just do what I do: hold tight and pretend it's a plan. Yes, well, it's a brilliant noise. I love that noise. There are fixed points throughout time where things must stay exactly the way they are. This ..."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvNoReviewBody" />
+            app:layout_constraintTop_toBottomOf="@id/rhUserHeader" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
