--- a/app/src/main/res/layout/activity_entry.xml
+++ b/app/src/main/res/layout/activity_entry.xml
@@ -1,76 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.entry.EntryActivity"
+    android:fitsSystemWindows="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <include layout="@layout/reuse_entry_header" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilEmail"
-            style="@style/EntryTextInput"
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/entry_text_input_layout_height"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/ivEntryHeader">
+            android:layout_height="240dp"
+            app:scrimAnimationDuration="300"
+            android:fitsSystemWindows="true"
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleGravity="center_vertical"
+            app:expandedTitleTextAppearance="@style/Some"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
-            <!-- The padding is needed because of the custom height of the inputLayout -->
-            <com.google.android.material.textfield.TextInputEditText
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
-                android:paddingTop="12dp"
-                android:paddingBottom="10dp" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="240dp"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tilPassword"
-            style="@style/EntryTextInput"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/entry_text_input_layout_height"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
-            app:passwordToggleEnabled="true">
+                <ImageView
+                    android:id="@+id/ivEntryHeader"
+                    android:layout_width="match_parent"
+                    android:layout_height="240dp"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/entry_header_back" />
 
-            <!-- The padding is needed because of the custom height of the inputLayout -->
-            <com.google.android.material.textfield.TextInputEditText
+                <TextView
+                    style="@style/EntryHeaderText"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:text="@string/app_name"
+                    app:layout_constraintBottom_toBottomOf="@id/ivEntryHeader"
+                    app:layout_constraintTop_toTopOf="@id/ivEntryHeader" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/tbEntry"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:paddingTop="12dp"
-                android:paddingBottom="10dp" />
-        </com.google.android.material.textfield.TextInputLayout>
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:navigationIcon="@drawable/ic_navigation_back"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btnLogin"
-            style="@style/Widget.MaterialComponents.Button.General"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <FrameLayout
+            android:id="@+id/flEntryContainer"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/entry_button_height"
-            android:layout_marginTop="12dp"
-            android:text="login"
-            app:layout_constraintTop_toBottomOf="@id/tilPassword" />
-
-        <TextView
-            android:id="@+id/tvNoAccountYet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
-            android:gravity="center"
-            android:padding="4dp"
-            android:text="No account yet? Create one"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnLogin" />
-
-        <include layout="@layout/reuse_entry_social_footer" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+            android:layout_height="match_parent" />
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
