--- a/app/src/main/res/layout/reuse_entry_social_footer.xml
+++ b/app/src/main/res/layout/reuse_entry_social_footer.xml
@@ -27,7 +27,7 @@
         android:text="or"
         app:layout_constraintEnd_toStartOf="@id/viewDividerEnd"
         app:layout_constraintStart_toEndOf="@id/viewDividerStart"
-        app:layout_constraintTop_toBottomOf="@id/tvNoAccountYet" />
+        app:layout_constraintTop_toBottomOf="@+id/tvLoginOrRegister" />
 
     <View
         android:id="@+id/viewDividerEnd"
