--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,6 +46,10 @@
         <item name="android:paddingBottom">20dp</item>
     </style>
 
+    <style name="Some" parent="TextAppearance.MaterialComponents.Headline3">
+        <item name="android:textColor">@android:color/transparent</item>
+    </style>
+
     <style name="EntryTextInput" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_marginStart">16dp</item>
         <item name="android:layout_marginEnd">16dp</item>
