--- a/app/src/main/res/layout/activity_add_poem.xml
+++ b/app/src/main/res/layout/activity_add_poem.xml
@@ -1,13 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.add.AddPoemActivity">
 
-    <TextView
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/ablAddPoem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add Poem" />
+        android:stateListAnimator="@animator/appbar_always_elevated"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <include layout="@layout/toolbar" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ablAddPoem">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilPoemTitle"
+                style="@style/EntryTextInput"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/entry_text_input_layout_height"
+                android:layout_marginTop="12dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <!-- The padding is needed because of the custom height of the inputLayout -->
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Poem Title"
+                    android:inputType="textCapSentences"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="10dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/tilPoemBody"
+                style="@style/EntryTextInput"
+                android:layout_width="match_parent"
+                android:layout_marginBottom="48dp"
+                android:layout_height="0dp"
+                android:layout_marginTop="28dp"
+                app:layout_constraintBottom_toTopOf="@id/btnLogin"
+                app:layout_constraintTop_toBottomOf="@id/tilPoemTitle">
+
+                <!-- The padding is needed because of the custom height of the inputLayout -->
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:hint="Fill in the body of your poem"
+                    android:inputType="textMultiLine"
+                    android:minLines="15"
+                    android:paddingTop="12dp"
+                    android:paddingBottom="10dp" />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/btnLogin"
+                style="@style/Widget.MaterialComponents.Button.General"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/entry_button_height"
+                android:layout_marginBottom="24dp"
+                android:text="save poem"
+                app:layout_constraintBottom_toBottomOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
