--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tilEmail"
         style="@style/EntryTextInput"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/entry_text_input_layout_height"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -29,7 +29,7 @@
         android:id="@+id/tilPassword"
         style="@style/EntryTextInput"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/entry_text_input_layout_height"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@+id/tilEmail"
         app:passwordToggleEnabled="true">
