--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -12,7 +12,7 @@
         android:id="@+id/tilUsername"
         style="@style/EntryTextInput"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/entry_text_input_layout_height"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -30,7 +30,7 @@
         android:id="@+id/tilEmail"
         style="@style/EntryTextInput"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/entry_text_input_layout_height"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@+id/tilUsername">
 
@@ -48,7 +48,7 @@
         android:id="@+id/tilPassword"
         style="@style/EntryTextInput"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/entry_text_input_layout_height"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@+id/tilEmail"
         app:passwordToggleEnabled="true">
@@ -67,7 +67,7 @@
         android:id="@+id/tilReEnterPassword"
         style="@style/EntryTextInput"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/entry_text_input_layout_height"
+        android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         app:layout_constraintTop_toBottomOf="@+id/tilPassword"
         app:passwordToggleEnabled="true">
@@ -88,7 +88,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/entry_button_height"
         android:layout_marginTop="12dp"
-        android:text="login"
+        android:text="register"
         app:layout_constraintTop_toBottomOf="@id/tilReEnterPassword" />
 
     <!-- Has to be the same name as the one in fragment_register.xml, just so the reuse_entry_social_footer.xml won't break -->
