--- a/app/src/main/res/layout/activity_add_poem.xml
+++ b/app/src/main/res/layout/activity_add_poem.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/tilPoemTitle"
                 style="@style/EntryTextInput"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/entry_text_input_layout_height"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -55,7 +55,7 @@
                 android:layout_marginBottom="18dp"
                 android:layout_height="0dp"
                 android:layout_marginTop="18dp"
-                app:layout_constraintBottom_toTopOf="@id/btnLogin"
+                app:layout_constraintBottom_toTopOf="@id/btnSavePoem"
                 app:layout_constraintTop_toBottomOf="@id/tilPoemTitle">
 
                 <!-- The padding is needed because of the custom height of the inputLayout -->
@@ -71,7 +71,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnLogin"
+                android:id="@+id/btnSavePoem"
                 style="@style/Widget.MaterialComponents.Button.General"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/entry_button_height"
