--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -55,4 +55,13 @@
         <item name="android:layout_marginEnd">16dp</item>
         <item name="android:layout_marginTop">6dp</item>
     </style>
+
+    <style name="MyProgressBar" parent="@style/Widget.AppCompat.ProgressBar.Horizontal">
+        <item name="android:progressDrawable">@drawable/custom_progress_bar_horizontal</item>
+        <item name="android:minHeight">8dip</item>
+        <item name="android:maxHeight">8dip</item>
+        <item name="android:progressBackgroundTint">@color/colorGrey_300</item>
+        <item name="android:progressTint">@color/colorPrimary</item>
+    </style>
+
 </resources>
