--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -16,20 +16,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="12dp">
 
-        <TextView
-            android:id="@+id/tvReviewTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Your review" />
-
         <com.shahar91.poems.ui.custom.ReviewHeader
             android:id="@+id/rhUserHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tvReviewTitle" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tvReviewBody"
