--- a/app/src/main/res/layout/activity_add_poem.xml
+++ b/app/src/main/res/layout/activity_add_poem.xml
@@ -42,7 +42,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Poem Title"
+                    android:hint="@string/add_poem_hint_title"
                     android:inputType="textCapSentences"
                     android:paddingTop="12dp"
                     android:paddingBottom="10dp" />
@@ -63,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:hint="Fill in the body of your poem"
+                    android:hint="@string/add_poem_hint_body"
                     android:inputType="textMultiLine"
                     android:minLines="15"
                     android:paddingTop="12dp"
@@ -76,7 +76,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/entry_button_height"
                 android:layout_marginBottom="12dp"
-                android:text="save poem"
+                android:text="@string/add_poem_button_save"
                 app:layout_constraintBottom_toBottomOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
