--- a/app/src/main/res/layout/custom_dialog_add_review.xml
+++ b/app/src/main/res/layout/custom_dialog_add_review.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="18dp"
         android:numStars="5"
+        android:stepSize="1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -20,7 +21,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilReviewBody"
         style="@style/EntryTextInput"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginTop="18dp"
         android:layout_marginBottom="18dp"
@@ -34,8 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="top"
-            android:hint="Fill in the body of your poem"
-            android:inputType="textMultiLine"
+            android:hint="@string/dialog_review_hint_body"
+            android:inputType="textCapSentences|textMultiLine"
             android:minLines="15"
             android:paddingTop="12dp"
             android:paddingBottom="10dp" />
