--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,7 +19,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
+            android:hint="@string/common_hint_email"
             android:inputType="textEmailAddress"
             android:paddingTop="12dp"
             android:paddingBottom="10dp" />
@@ -38,7 +38,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/common_hint_password"
             android:inputType="textPassword"
             android:paddingTop="12dp"
             android:paddingBottom="10dp" />
@@ -50,7 +50,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/entry_button_height"
         android:layout_marginTop="12dp"
-        android:text="login"
+        android:text="@string/entry_button_login"
         app:layout_constraintTop_toBottomOf="@id/tilPassword" />
 
     <!-- Has to be the same name as the one in fragment_register.xml, just so the reuse_entry_social_footer.xml won't break -->
@@ -64,7 +64,7 @@
         android:background="?selectableItemBackground"
         android:gravity="center"
         android:padding="4dp"
-        android:text="No account yet? Create one"
+        android:text="@string/common_no_account_yet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnLogin" />
