--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -20,7 +20,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username"
+            android:hint="@string/common_hint_username"
             android:inputType="textPersonName"
             android:paddingTop="12dp"
             android:paddingBottom="10dp" />
@@ -38,7 +38,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Email"
+            android:hint="@string/common_hint_email"
             android:inputType="textEmailAddress"
             android:paddingTop="12dp"
             android:paddingBottom="10dp" />
@@ -57,7 +57,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
+            android:hint="@string/common_hint_password"
             android:inputType="textPassword"
             android:paddingTop="12dp"
             android:paddingBottom="10dp" />
@@ -76,7 +76,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Re-enter Password"
+            android:hint="@string/common_hint_re_enter_password"
             android:inputType="textPassword"
             android:paddingTop="12dp"
             android:paddingBottom="10dp" />
@@ -88,7 +88,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/entry_button_height"
         android:layout_marginTop="12dp"
-        android:text="register"
+        android:text="@string/entry_button_register"
         app:layout_constraintTop_toBottomOf="@id/tilReEnterPassword" />
 
     <!-- Has to be the same name as the one in fragment_register.xml, just so the reuse_entry_social_footer.xml won't break -->
@@ -102,7 +102,7 @@
         android:background="?selectableItemBackground"
         android:gravity="center"
         android:padding="4dp"
-        android:text="No account yet? Create one"
+        android:text="@string/common_no_account_yet"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnRegister" />
