--- a/app/src/main/res/layout/list_item_global_rating.xml
+++ b/app/src/main/res/layout/list_item_global_rating.xml
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="9dp"
-            android:text="5"
+            android:text="@string/global_rating_label_five"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constraintBottom_toBottomOf="@id/pbFiveStarRating"
             app:layout_constraintEnd_toStartOf="@id/pbFiveStarRating"
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="9dp"
             android:layout_marginStart="20dp"
-            android:text="4"
+            android:text="@string/global_rating_label_four"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constraintBottom_toBottomOf="@id/pbFourStarRating"
             app:layout_constraintEnd_toStartOf="@id/pbFourStarRating"
@@ -112,7 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="9dp"
-            android:text="3"
+            android:text="@string/global_rating_label_three"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constraintBottom_toBottomOf="@id/pbThreeStarRating"
             app:layout_constraintEnd_toStartOf="@id/pbThreeStarRating"
@@ -137,7 +137,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="9dp"
             android:layout_marginStart="20dp"
-            android:text="2"
+            android:text="@string/global_rating_label_two"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constraintBottom_toBottomOf="@id/pbTwoStarRating"
             app:layout_constraintEnd_toStartOf="@id/pbTwoStarRating"
@@ -162,7 +162,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="9dp"
             android:layout_marginStart="20dp"
-            android:text="1"
+            android:text="@string/global_rating_label_one"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
             app:layout_constraintBottom_toBottomOf="@id/pbOneStarRating"
             app:layout_constraintEnd_toStartOf="@id/pbOneStarRating"
