--- a/app/src/main/res/layout/list_item_poem_detail.xml
+++ b/app/src/main/res/layout/list_item_poem_detail.xml
@@ -54,7 +54,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Written by: "
+                android:text="@string/poem_detail_label_writer"
                 android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />
 
             <TextView
