--- a/app/src/main/res/layout/list_item_review.xml
+++ b/app/src/main/res/layout/list_item_review.xml
@@ -33,5 +33,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rhUserHeader"
             tools:text="No idea. Just do what I do: hold tight and pretend it's a plan. Yes, well, it's a brilliant noise. I love that noise. There are fixed points throughout time where things must stay exactly the way they are. This ..." />
+
+        <ImageView
+            android:id="@+id/ivReviewMenu"
+            android:layout_width="28dp"
+            android:layout_height="34dp"
+            android:background="?android:selectableItemBackground"
+            android:clickable="true"
+            android:focusable="true"
+            android:padding="0dp"
+            android:scaleType="center"
+            android:src="@drawable/ic_overflow"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
