--- a/app/src/main/res/layout/custom_dialog_add_review.xml
+++ b/app/src/main/res/layout/custom_dialog_add_review.xml
@@ -20,7 +20,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilReviewBody"
-        style="@style/EntryTextInput"
+        style="@style/CommonTextInput"
         android:layout_width="0dp"
         android:layout_height="200dp"
         android:layout_marginTop="18dp"
