Added functionality to add a new poem, some code cleanup and refactoring as well

--- a/app/src/main/res/layout/reuse_entry_social_footer.xml
+++ b/app/src/main/res/layout/reuse_entry_social_footer.xml
@@ -11,6 +11,7 @@
         android:id="@+id/viewDividerStart"
         android:layout_width="0dp"
         android:layout_height="1dp"
+        android:visibility="gone"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:background="@color/entry_divider_line"
@@ -21,6 +22,7 @@
 
     <TextView
         android:id="@+id/tvDividerContent"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -34,6 +36,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginStart="16dp"
+        android:visibility="gone"
         android:layout_marginEnd="16dp"
         android:background="@color/entry_divider_line"
         app:layout_constraintBottom_toBottomOf="@id/tvDividerContent"
@@ -44,6 +47,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLoginGoogle"
         style="@style/Widget.MaterialComponents.Button.General"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="@dimen/entry_button_height"
         android:layout_marginTop="12dp"
@@ -60,6 +64,7 @@
         style="@style/Widget.MaterialComponents.Button.General"
         android:layout_width="match_parent"
         android:layout_height="@dimen/entry_button_height"
+        android:visibility="gone"
         android:layout_marginTop="8dp"
         android:text="@string/common_facebook"
         app:backgroundTint="#4868AD"
