--- a/app/src/main/res/layout/custom_circular_profile_image.xml
+++ b/app/src/main/res/layout/custom_circular_profile_image.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- TODO: check if this layout is correct!!!-->
     <ImageView
         app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/ivImage"
