--- a/app/src/main/res/layout/fragment_poem.xml
+++ b/app/src/main/res/layout/fragment_poem.xml
@@ -1,64 +1,84 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.progressindicator.ProgressIndicator
-        android:id="@+id/loadingView"
-        style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Indeterminate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        tools:visibility="gone" />
+    <data>
 
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/poemLayout"
+        <import type="android.view.View" />
+
+        <variable
+            name="viewModel"
+            type="com.shahar91.poems.ui.home.poem.PoemViewModel" />
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/general_background"
-        android:visibility="gone"
-        tools:visibility="visible">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <com.google.android.material.progressindicator.ProgressIndicator
+            android:id="@+id/loadingView"
+            style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Indeterminate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="@{viewModel.poem == null ? View.VISIBLE : View.GONE }"
+            tools:visibility="gone" />
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/poemLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:context=".ui.home.poem.PoemFragment">
+            android:background="@color/general_background"
+            android:visibility="@{viewModel.poem == null ? View.GONE : View.VISIBLE }"
+            tools:visibility="visible">
 
-            <include layout="@layout/reuse_poem_detail" />
-
-            <com.shahar91.poems.ui.custom.NoReview
-                android:id="@+id/noReview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="14dp"
-                android:layout_marginBottom="12dp" />
-
-            <include
-                android:id="@+id/ownReviewLayout"
-                layout="@layout/list_item_review"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="14dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="14dp"
-                android:layout_marginBottom="12dp"
-                android:visibility="gone" />
-
-            <include layout="@layout/list_item_global_rating" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvPoemReviews"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:clipToPadding="false"
-                android:nestedScrollingEnabled="false"
-                android:paddingBottom="108dp"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/list_item_review" />
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
-</FrameLayout>
+                android:orientation="vertical"
+                tools:context=".ui.home.poem.PoemFragment">
+
+                <include
+                    android:id="@+id/poemDetail"
+                    layout="@layout/reuse_poem_detail"
+                    app:author="@{viewModel.poem.user.username}"
+                    app:poem="@{viewModel.poem.body}"
+                    app:title="@{viewModel.poem.title}" />
+
+                <com.shahar91.poems.ui.custom.NoReview
+                    android:id="@+id/noReview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="14dp"
+                    android:layout_marginBottom="12dp"
+                    android:visibility="@{viewModel.ownReview == null ? View.VISIBLE : View.GONE }" />
+
+                <include
+                    android:id="@+id/ownReviewLayout"
+                    layout="@layout/list_item_review"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="14dp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginEnd="14dp"
+                    android:layout_marginBottom="12dp"
+                    android:visibility="@{viewModel.ownReview == null ? View.GONE : View.VISIBLE }"
+                    tools:visibility="gone" />
+
+                <include layout="@layout/list_item_global_rating" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvPoemReviews"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="false"
+                    android:paddingBottom="108dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/list_item_review" />
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </FrameLayout>
+</layout>
